apply flash list and virtualized list for list
